--- a/views/auth/user/user-addressBook.ejs
+++ b/views/auth/user/user-addressBook.ejs
@@ -19,7 +19,7 @@
              </div>
           </div>
           <div class="user-item">
-             <div>Quản lý đơn hàng</div>
+            <div><a style="color: unset" href="/user/purchase">Quản lý đơn hàng</a></div>
           </div>
           <div class="user-item">
              <div>Sổ địa chỉ</div>
