--- a/views/auth/user/user-profile.ejs
+++ b/views/auth/user/user-profile.ejs
@@ -9,7 +9,7 @@
       <div class="user-list-option">
          <div class="">
             <div class="user-item-selected">
-                  <div>Thông tin của tôi</div>
+                  <div><a style="color:unset;" href="/user/account/profile">Thông tin của tôi</a></div>
             </div>
             <div class="stardust-dropdown_item-body stardust-dropdown_item-body-open" style="opacity: 1;">
                 <div class="userpage-sidebar-menu_subsection">
@@ -21,7 +21,7 @@
              </div>
          </div>
          <div class="user-item">
-            <div>Quản lý đơn hàng</div>
+            <div><a style="color: unset" href="/user/purchase">Quản lý đơn hàng</a></div>
          </div>
          <div class="user-item">
             <div>Sổ địa chỉ</div>
