--- a/views/auth/user/user-changePassword.ejs
+++ b/views/auth/user/user-changePassword.ejs
@@ -24,7 +24,7 @@
              </div>
          </div>
          <div class="user-item">
-            <div>Quản lý đơn hàng</div>
+            <div><a style="color: unset" href="/user/purchase">Quản lý đơn hàng</a></div>
          </div>
          <div class="user-item">
             <div>Sổ địa chỉ</div>
