--- a/public/stylesheets/css/admin_order.css
+++ b/public/stylesheets/css/admin_order.css
@@ -46,3 +46,10 @@
     word-break: break-all;
     font-weight: var(--font-weight);
 }
+.order-confirm {
+    cursor: pointer;
+}
+.option-active a {
+    color: red !important;
+    text-decoration: underline;
+}
