--- a/views/admin/product/addProduct.ejs
+++ b/views/admin/product/addProduct.ejs
@@ -1,5 +1,5 @@
 
-<% include ../../partials/header_admin %>
+<% include ../../partials/header_seller %>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"> </script>
 <script src="/javascripts/js/addProduct.js"></script>
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
