--- a/views/admin/product/editProduct.ejs
+++ b/views/admin/product/editProduct.ejs
@@ -1,4 +1,4 @@
-<% include ../../partials/header_admin %>
+<% include ../../partials/header_seller %>
 <link rel="stylesheet" href="/stylesheets/css/add_product.css">
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"> </script>
 <script src="/javascripts/js/addProduct.js"></script>
