--- a/views/admin/index.ejs
+++ b/views/admin/index.ejs
@@ -1,4 +1,4 @@
-<% include ../partials/header_admin %>
+<% include ../partials/header_seller %>
 
 <ul class="user-option nav nav-tabs">
     <li class="option option-my-booking is-flex nav-item">
