--- a/views/adminSys/order/order.ejs
+++ b/views/adminSys/order/order.ejs
@@ -1,6 +1,10 @@
 <% include ../../partials/header_admin %>
 <link rel="stylesheet" href="/stylesheets/css/admin_order.css">
 <link rel="stylesheet" href="/stylesheets/css/user_info.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.css">
+<script src="https://cdnjs.cloudflare.com/ajax/libs/sweetalert/1.1.3/sweetalert.min.js"></script>
+
+<script src="/javascripts/js/admin/order.js"></script>
 
 <div style="margin-left: 5%;">
    <ul class="user-option nav nav-tabs">
@@ -73,7 +77,7 @@
                              </defs>
                           </svg>
                        </div>
-                       <div class="_2tDqUs">noname</div>
+                       <div class="_2tDqUs"><%-item.shopName%></div>
                        <div class="_18HTrf">
                           <button class="stardust-button stardust-button--primary">
                              <svg viewBox="0 0 17 17" class="shopee-svg-icon icon-btn-chat" style="fill: white;">
@@ -120,11 +124,22 @@
                     Tổng hóa đơn
                 </div>
                 <div class="col-sm-2">
+                    <%if (item.status == -1) {%>
+                        Đã hủy
+                    <%}%>
                    <%if (item.status == 0) {%>
                         Chờ xử lý
                     <%}%>
+                    <%if (item.status == 1) {%>
+                        Đang chuẩn bị hàng
+                    <%}%>
                 </div>
                 <div class="col-sm-4">
+                    <%if (item.status == -1) {%>
+                        <a href="/admin/order/detail/<%-item.orderId%>">
+                            <button class="btn btn-default dropdown-toggle" type="button">Chi tiết</button>
+                        </a>
+                    <%}%>
                     <%if (item.status == 0) {%>
                         <div class="dropdown">
                             <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
@@ -133,7 +148,19 @@
                             </button>
                            <ul class="dropdown-menu action-product" aria-labelledby="dropdownMenu1">
                               <li><a href="/admin/order/detail/<%-item.orderId%>">Chi tiết</a></li>
-                              <li><a href="seller/product/edit/variant/">Xác nhận</a></li>
+                              <li><a data-id="<%-item.orderId%>" class="order-confirm">Xác nhận</a></li>
+                              <li><a data-id="<%-item.orderId%>" class="order-cancel">Hủy đơn hàng</a></li>
+                            </ul>
+                        </div>
+                    <%}%>
+                    <%if (item.status == 1) {%>
+                        <div class="dropdown">
+                            <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                              Tùy chọn
+                              <span class="caret"></span>
+                            </button>
+                           <ul class="dropdown-menu action-product" aria-labelledby="dropdownMenu1">
+                              <li><a href="/admin/order/detail/<%-item.orderId%>">Chi tiết</a></li>
                             </ul>
                         </div>
                     <%}%>
